# fabric-modeling-readiness-assessor

./: .gitignore  README.md  bootstrap.ps1  bootstrap.sh  claude_mcp_config.json  narrator.config.yaml  pyproject.toml  scoring-rubric.yaml
.cursor/: mcp.json
.github/: copilot-instructions.md
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
assessments/: README.md
docs/: patterns.md
narrator/mcp_server/: artifact_reader.py  auth.py  deliverables.py  onelake.py  pyproject.toml  server.py
narrator/mcp_server/tools/: audit_source_attribution.py  enumerate_ontologies.py  extract_entity_definitions.py  list_runs.py  list_semantic_models.py  load_run.py  run_scanner.py
scanner/: modeling-readiness-scanner.ipynb  provisioner-teardown.ipynb  provisioner.ipynb
scanner/lib/scanner/: artifact.py  canonical_entity.py  entity-synonyms.yaml  field_lineage.py  findings.py  layered_modeling.py  ontologies.py  pyproject.toml  scoring.py  semantic_models.py  steward_loop.py
specs/001-modeling-readiness-assessor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
templates/: executive-summary.md.jinja  findings-detail.md.jinja  remediation-plan.md.jinja  workshop-agenda.md.jinja
tests/narrator/: e2e_validate.py  test_artifact_reader.py  test_auth.py  test_onelake.py  test_tools.py
tests/scanner/: test_artifact.py  test_canonical_entity.py  test_field_lineage.py  (+5 more)
(+10 files in other folders)
