[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modeling-readiness-narrator"
version = "0.1.0"
description = "Modeling Readiness Assessor — narrator MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "msal>=1.28",
    "azure-storage-file-datalake>=12.14",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.scripts]
modeling-readiness-narrator = "narrator.mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
