[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modeling-readiness-scanner"
version = "0.1.0"
description = "Modeling Readiness Assessor — scanner library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rapidfuzz>=3.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
